--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -72,13 +72,12 @@ h4 {
     font-family: 'Poppins';
     font-weight: 500;
     font-size: 0;
-    opacity: 0;
     transition: all 200ms ease-in;
 }
 
-@media (hover: none) {
+@media (hover: hover) {
     .item .title {
-        opacity: 1;
+        opacity: 0;
     }
 }
 
