--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -56,6 +56,7 @@ h4 {
     margin: 2rem 10% 2rem 10%;
     cursor: pointer;
     transition: opacity 200ms ease-in;
+    opacity: 0.8;
 }
 
 .item:hover img {
@@ -79,6 +80,9 @@ h4 {
     .item .title {
         opacity: 0;
         font-size: 0;
+    }
+    .item {
+        opacity: 1;
     }
 }
 
@@ -120,6 +124,7 @@ h4 {
 
 .page p {
     text-align: center;
+    max-width: 80vw;
 }
 
 .background {
