--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -112,7 +112,10 @@ h4 {
     font-family: 'Poppins';
     font-weight: 500;
     transition: all 200ms ease-in;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @media (hover: hover) {
