improved ease of use

--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -30,6 +30,11 @@
     padding: 0.5rem;
 }
 
+.cvr {
+    font-family: 'Poppins', sans-serif;
+    margin-top: 0.6rem;
+}
+
 .anchor {
     font-family: 'Poppins', sans-serif;
 }
