--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -25,14 +25,27 @@
     margin-left: 1.5rem;
 }
 
+.quick {
+    display: flex;
+}
+
 header.sticky {
     position: fixed;
     top: 0;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-@media only screen and (max-width: 1015px) {
+@media only screen and (max-width: 1190px) {
     .hamburger {
         display: inline;
+    }
+}
+
+.call {
+    display: flex;
+    justify-content: center;
+
+    span {
+        margin-right: 10px;
     }
 }
